add markup form

--- a/index.html
+++ b/index.html
@@ -8,6 +8,60 @@
 </head>
 <body>
   <div class="container">
+    <h1 class="page-title">Duncan's Just-in-time Donuts</h1>
+    <p class="slogan">All donuts 50 cwnts each, cake or glazed!</p>
+    <div class="content-wrapper">
+      <div class="banner">
+        <img src="images/donut.png" alt="donuts">
+      </div>
+      <div class="form-wrapper">
+        <form name="" action="">
+          <div class="form-item">
+            <label for="name">Name:</label>
+            <input id="name" name="name" type="text">
+          </div>
+          <div class="form-item">
+            <label for="phone">Phone:</label>
+            <input id="phone" name="phone" type="tel">
+          </div>
+          <div class="form-item">
+            <label for="address">Address:</label>
+            <input id="address" name="address" type="text">
+          </div>
+          <div class="form-item">
+            <label for="cake_donuts"># of cake donuts:</label>
+            <input id="cake_donuts" name="cake_donuts" type="number">
+          </div>
+          <div class="form-item">
+            <label for="glazed_donuts"># of glazed donuts:</label>
+            <input id="glazed_donuts" name="glazed_donuts" type="number">
+          </div>
+          <div class="form-item">
+            <label for="minutes">How many minutes to deliver:
+              <br>
+              <small>minimum delivery time is 30 minutes</small>
+            </label>
+            <input id="minutes" type="number">
+          </div>
+          <div class="form-item">
+            <label for="subtotal">Subtotal:</label>
+            <input id="subtotal" name="subtotal" type="text">
+          </div>
+          <div class="form-item">
+            <label for="tax">Tax:</label>
+            <input id="tax" name="tax" type="text">
+          </div>
+          <div class="form-item">
+            <label for="total">Total:</label>
+            <input id="total" name="total" type="text">
+          </div>
+
+          <div class="form-submit-wrapper">
+            <button class="form-submit" type="submit">Place Order</button>
+          </div>
+        </form>
+      </div>
+    </div>
   </div>
   <script src="js/app.js"></script>
 </body>
